--- a/page/infopage/infopage.css
+++ b/page/infopage/infopage.css
@@ -1,7 +1,7 @@
 .container {
 	display: grid;
 
-	grid-template-columns: 1fr 400px;
+	grid-template-columns: 600px 400px;
 	/* grid-template-columns: 1fr 1fr 1fr */
 	/* grid-template-columns: repeat(3, 1fr) */
 	/* grid-template-columns: 200px 1fr */
@@ -23,7 +23,7 @@
 
 .main{
 	grid-area: main;
-	padding:0 50px 0 0;
+	width: 600px;
 }
 
 .label{
