--- a/page/mainpage/main__css/paldo_select.css
+++ b/page/mainpage/main__css/paldo_select.css
@@ -1,7 +1,7 @@
 .wrap {
-    max-width: 500px
+    max-width: 200px
   }
-  .select-css {
+  .selectbox {
       display: block;
       font-size: 16px;
       font-family: sans-serif;
@@ -25,20 +25,20 @@
       background-position: right .7em top 50%, 0 0;
       background-size: .65em auto, 100%;
   }
-  .select-css::-ms-expand {
+  .selectbox::-ms-expand {
       display: none;
   }
-  .select-css:hover {
+  .selectbox:hover {
       border-color: #888;
   }
-  .select-css:focus {
+  .selectbox:focus {
       border-color: #aaa;
       box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
       box-shadow: 0 0 0 3px -moz-mac-focusring;
       color: #222; 
       outline: none;
   }
-  .select-css option {
+  .selectbox option {
       font-weight:normal;
   }
   
@@ -46,4 +46,10 @@
   
   body {
     padding-bottom: 3rem;
+  }
+
+  #type__people{
+      position: relative;
+      left: 300px;
+        bottom: 40px;
   }
