--- a/page/infopage/infopage_css/menubar.css
+++ b/page/infopage/infopage_css/menubar.css
@@ -16,10 +16,10 @@ html {height:100%;}
 
 .menubar
 {
-  width:1320px;
-  margin: 0 auto;
+  position: absolute;
+  width:2030px;
+  margin: 0;
   border:none;
-  background: #1D375F;
   overflow: hidden;
 }
 
