--- a/page/mainpage/main__css/main_image.css
+++ b/page/mainpage/main__css/main_image.css
@@ -1,4 +1,4 @@
-body{overflow-x: hidden; : auto;}
+body{overflow-x: hidden;}
 
 #wrap * {
   -webkit-box-sizing: border-box;
@@ -163,7 +163,7 @@ body{overflow-x: hidden; : auto;}
 
 #wrap section:nth-child(2):before {
   background-color: #cc0000;
-  background-image: url(../../infopage/충북_단양.png);
+  background-image: url(../../infopage/infopage_images/충북_단양.png);
 }
 
 .hide-images #wrap section:nth-child(2):before {
