--- a/page/mainpage/main__css/main__info.css
+++ b/page/mainpage/main__css/main__info.css
@@ -14,10 +14,14 @@
 
 .frame{
     width:500px;
+    height: 345px;
     margin: auto;
     padding: 53px;
     text-align: center;
-    background-color: #e6e6e6
+    background-color: rgb(221,232,247);
+    border: 1px solid;
+    border-radius: 15px;
+    border-color: rgb(129,166,222)
 }
 
 .selectBox{
@@ -44,14 +48,8 @@
 }
 
 .bottom{
-    background-color: white;
-    position: relative; 
     padding: 10px 40px;
     text-align: center;
-    color: white;
-    border: 1px solid;
-    border-radius: 15px;
-
 }
 
  /* Customize the label (the container) */
@@ -80,17 +78,17 @@
     left: 0;
     height: 25px;
     width: 25px;
-    background-color: #eee;
+    background-color: white;
   }
    
   /* On mouse-over, add a grey background color */
   .container:hover input ~ .checkmark {
-    background-color: #ccc;
+    background-color: white;
   }
    
   /* When the checkbox is checked, add a "red" background */
   .container input:checked ~ .checkmark {
-    background-color: #ffab9d;
+    background-color: rgb(129,166,222);
   }
    
   /* Create the checkmark/indicator (hidden when not checked) */
@@ -117,4 +115,11 @@
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
   } 
-  
+.left-box {
+  float: left;
+  width: 50%;
+}
+.right-box {
+  float: right;
+  width: 50%;
+}
