--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -21,8 +21,8 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
-
-            <title>메인 페이지</title>
+            <script src="{{url_for('static', filename='js/getUserParams.js')}}"></script>
+            <title>우주공감</title>
     </head>
     <body id="main__body">
         
@@ -63,20 +63,20 @@
 
 
         
-        <div class="info">
-            <img src="{{ url_for('static', filename='main_img/우주공감.png')}}">
+        <div class="info" style="position: relative; top: -125px;">
+            <img src="{{ url_for('static', filename='main_img/우주공감.png')}}" width="350" height="350">
             <!-- <h1 class="service_name">서비스 이름</h1>
             <h>
                 서비스 설명
             </h> -->
         </div>
 
-
+        
         <div class="input">
             <div class="input_group">
                 <!-- <h1 class=label>지역선택(도 단위, 예: 강원도)</h1> -->
                 <div class="wrap">
-                    <link rel="stylesheet" href="./main__css/paldo_select.css">
+                    <link rel="stylesheet" href="{{url_for('static', filename='main__css/paldo_select.css')}}">
                     <select class="selectbox" id="type__paldo">
                         <option>지역 선택</option>
                         <option value="서울">서울</option>
@@ -102,7 +102,7 @@
             </div>
                 <!-- <h1 class=label>지역선택(도 단위, 예: 강원도)</h1> -->
                 <div class="wrap">
-                    <link rel="stylesheet" href="./main__css/paldo_select.css">
+                    <link rel="stylesheet" href="{{url_for('static', filename='main__css/paldo_select.css')}}">
                     <select class="selectbox" id="type__people">
                         <option>동반유형 선택</option>
                         <option value="나홀로">나홀로</option>
@@ -134,7 +134,7 @@
             </div>
         </div>
         <br>
-        <link rel="stylesheet" href="./main__css/main_button.css">
+        <link rel="stylesheet" href="{{url_for('static', filename='main__css/main_button.css')}}">
     <a class="cta" >
     <span type="button" onclick=getUserParams()>결과 보기</span>
     <svg width="13px" height="10px" viewBox="0 0 13 10">
