결과 보기에서 선택 안 해도 이동하는 문제 제거

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -135,7 +135,7 @@
         </div>
         <br>
         <link rel="stylesheet" href="{{url_for('static', filename='main__css/main_button.css')}}">
-    <a class="cta" href="{{ url_for('result') }}">
+    <a class="cta">
     <span type="button" onclick=getUserParams()>결과 보기</span>
     <svg width="13px" height="10px" viewBox="0 0 13 10">
       <path d="M1,5 L11,5"></path>
