--- a/flask/static/infopage_css/infopage.css
+++ b/flask/static/infopage_css/infopage.css
@@ -79,9 +79,6 @@ table {
 	text-align:center;
 }
 
-.mapinfo{
-	grid-area: mapinfo;
-}
 
 .tourlist{
 	grid-area: tourlist;
@@ -137,3 +134,17 @@ table {
 	left: 0;
 	bottom: 0;
   }
+
+.mapinfo .mapinfo{
+	z-index: 1;
+	
+}
+.mapinfo .markerFilter{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
+    z-index: 2;
+    display: 'flex';
+    justify-content: 'center';
+}
