--- a/flask/templates/infopage.html
+++ b/flask/templates/infopage.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{{url_for('static', filename='infopage_css/infopage.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='infopage_css/recommend_info.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='infopage_css/menubar.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='infopage_css/filter.css')}}">
     <title>우주공감</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -109,7 +110,8 @@
             </ul>
         </div>
         <div class="mapinfo" id="map" style="width:650px; height:500px; position: relative; left: 70px;">
-            <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=37531866be664df9b26e2c034430dfc5"></script>
+          <div> 
+          <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=37531866be664df9b26e2c034430dfc5"></script>
             <script>
                 var container = document.getElementById('map'); //지도를 담을 영역의 DOM 레퍼런스
                 var options = { //지도를 생성할 때 필요한 기본 옵션
@@ -121,8 +123,29 @@
                 Initialization(map);
                 displayMarker();
             </script>
+            </div> 
+                    <div class="markerFilter" style="background-color: rgba(255, 255, 255, 0.75);">
+                      <div class="filterButtonBox">
+                        <button class="filterBtn filterhover" onclick=filterBtn(0)>
+                          <img class="filterImg" src="{{ url_for('static', filename='infopage_img/four-dots.svg')}}" width="25px" height="25px">
+                          <p>전체</p>
+                        </button>
+                        <button class="filterBtn filterhover" onclick=filterBtn(1)>
+                          <img class="filterImg" src="{{ url_for('static', filename='infopage_img/hanok.svg')}}" width="25px" height="25px">
+                          <p>한옥</p>
+                        </button>
+                        <button class="filterBtn filterhover" onclick=filterBtn(2)> 
+                          <img class="filterImg" src="{{ url_for('static', filename='infopage_img/hotel.svg')}}" width="25px" height="25px">
+                          <p>호텔</p>
+                        </button>
+                        <button class="filterBtn filterhover" onclick=filterBtn(3)>
+                          <img class="filterImg" src="{{ url_for('static', filename='infopage_img/bb.svg')}}" width="25px" height="25px">
+                          <p>민박</p>
+                        </button>
+                      </div>
+                    </div>
         </div>
-        
+
         <div class="blog-card" style="position: relative; left: 100px; top: 30px;">
             <div class="meta">
               <div class="photo" style="background-image: url(https://cdn.visitkorea.or.kr/img/call?cmd=VIEW&id=806d3a5c-f4bf-4ad3-8c52-59ae5a988689)"></div>
