--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -42,13 +42,13 @@
                 </section>
                 <section>
                     <article>
-                        <h2>전통한옥</h2>
+                        <h2>한옥에서의 일박</h2>
                         <p>한국 고유의 전통문화를 체험할 수 있는 한옥 숙박시설</p>
                     </article>
                 </section>
                 <section>
                     <article>
-                        <h2>가치 있는 여행</h2>
+                        <h2>여행의 가치</h2>
                         <p>일탈, 휴식, 재미, 누군가에겐 의미를 더하는 여행</p>
                     </article>
                 </section>
@@ -64,11 +64,11 @@
 
         
         <div class="info" style="position: relative; top: -125px;">
-            <img src="{{ url_for('static', filename='main_img/우주공감.png')}}" width="350" height="350">
-            <!-- <h1 class="service_name">서비스 이름</h1>
-            <h>
-                서비스 설명
-            </h> -->
+            <img src="{{ url_for('static', filename='main_img/우주공감.png')}}" width="350" height="350"><br>
+            <h style="font-weight:bold; color: #002545;">우주공감</h><h>은 한국관광품질인증제가 보장하는 관광시설을 바탕으로 만들어진 서비스입니다.<br>
+                여행자가 생각하는 가치있는 여행을 중심으로 딱 맞는, 잊을 수 없는 경험을 선사해드립니다.<br>
+                우주공감이 그려나가는 세상 속에서</h>
+                <h style="font-weight:bold; color: #002545;">우리가 주인공이 되는 공감하는 여행</h><h>을 만들어 보세요.</h>
         </div>
 
         
