--- a/flask/templates/infopage.html
+++ b/flask/templates/infopage.html
@@ -22,8 +22,7 @@
                 <ul style="margin:25ppx;">
                     <li><a href="{{ url_for('index') }}" class="home">home</a></li>
                     <li><a href="#" class="about">about</a></li>
-                    <li><a href="#" class="products">products</a></li>
-                    <li><a href="#" class="services">services</a></li>
+                    <li><a href="#" class="contact">contact</a></li>
                     <div class="menuUnderline"></div>
                 </ul>
             </span>
@@ -65,15 +64,15 @@
                 <br>
                 <h style=font-weight:bold>열린 관광 요소</h>
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                    <div class="btn-group mr-2" role="group" aria-label="First group" style='margin:auto;'>
-                      <button id="b1" type="button" style=background-color:white class="btn btn-secondary"><h id="bb1" style='font-size:14px;color:rgb(157,186,209)'>장애인 화장실</h></button>
+                  <div class="btn-group mr-2" role="group" aria-label="First group" style='position:absloute;left:80px'>
+                    <button id="b1" type="button" style=background-color:white class="btn btn-secondary"><h id="bb1" style='font-size:14px;color:rgb(157,186,209)'>장애인 화장실</h></button>
                       <button id="b2" type="button" style=background-color:white class="btn btn-secondary"><h id="bb2" style=font-size:14px;color:rgb(157,186,209)>장애인용 엘리베이터</h></button>
                       <button id="b3" type="button" style=background-color:white class="btn btn-secondary"><h id="bb3" style=font-size:14px;color:rgb(157,186,209)>장애인 전용 주차구역</h></button>
                       <button id="b4" type="button" style=background-color:white class="btn btn-secondary"><h id="bb4" style=font-size:14px;color:rgb(157,186,209)>주출입구 단차없음</h></button>
                     </div>
                   </div>
                   <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                    <div class="btn-group mr-2" role="group" aria-label="First group" style='margin:auto;'>
+                    <div class="btn-group mr-2" role="group" aria-label="First group" style='position:absloute;left:120px'>
                       <button id="b5" type="button" style=background-color:white class="btn btn-secondary"><h id="bb5" style=font-size:14px;color:rgb(157,186,209)>지하철 접근가능</h></button>
                       <button id="b6" type="button" style=background-color:white class="btn btn-secondary"><h id="bb6" style='font-size:14px;color:rgb(157,186,209)'>저상버스 접근가능</h></button>
                       <button id="b7" type="button" style=background-color:white class="btn btn-secondary"><h id="bb7" style=font-size:14px;color:rgb(157,186,209)>휠체어 대여</h></button>
@@ -81,7 +80,7 @@
                     </div>
                   </div>
                   <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                    <div class="btn-group mr-2" role="group" aria-label="First group" style='margin:auto;'>
+                    <div class="btn-group mr-2" role="group" aria-label="First group" style='position:absloute;left:160px'>
                       <button id="b9" type="button" style=background-color:white class="btn btn-secondary"><h id="bb9" style=font-size:14px;color:rgb(157,186,209)>청각장애인 편의</h></button>
                       <button id="b10" type="button" style=background-color:white class="btn btn-secondary"><h id="bb10" style=font-size:14px;color:rgb(157,186,209)>수유실</h></button>
                       <button id="b11" type="button" style=background-color:white class="btn btn-secondary"><h id="bb11" style=font-size:14px;color:rgb(157,186,209)>장애인 객실</h></button>
