--- a/flask/templates/infopage.html
+++ b/flask/templates/infopage.html
@@ -123,6 +123,13 @@
                 displayMarker();
             </script>
             </div> 
+            <div class="compare-frame" style="background-color: skyblue;position:relative; margin-left:100px">
+              <h>테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트</h>
+              <h>테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트</h>
+              <h>테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트</h>
+              <h>테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트</h>
+              <h>테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트</h>
+            </div>
                     <div class="markerFilter" style="background-color: rgba(255, 255, 255, 0.75);">
                       <div class="filterButtonBox">
                         <button class="filterBtn filterhover" onclick=filterBtn(0)>
@@ -161,7 +168,7 @@
             <div class="description">
               <h1>해운대해수욕장</h1>
               <h2>도심에서 해수욕을 즐기다</h2>
-              <p>
+              <p></p>
                 
                 부산의 대표 해수욕장인 해운대해수욕장. 백사장의 길이 1.5km, 너비 30~50m, 
                 평균수심 1m, 면적 58,400㎥의 규모로 넓은 백사장과 아름다운 해안선을 자랑하고
