--- a/flask/templates/infopage.html
+++ b/flask/templates/infopage.html
@@ -123,13 +123,7 @@
                 displayMarker();
             </script>
             </div> 
-            <div class="compare-frame" style="background-color: skyblue;position:relative; margin-left:100px">
-              <h>테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트</h>
-              <h>테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트</h>
-              <h>테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트</h>
-              <h>테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트</h>
-              <h>테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트</h>
-            </div>
+
                     <div class="markerFilter" style="background-color: rgba(255, 255, 255, 0.75);">
                       <div class="filterButtonBox">
                         <button class="filterBtn filterhover" onclick=filterBtn(0)>
@@ -151,7 +145,13 @@
                       </div>
                     </div>
         </div>
-
+        <div class="compare-frame" style="background-color: skyblue;position:relative; margin-left:100px; height: 300px; position: relative; top: 20px;">
+          <h>차트차트차트차트차트차트차트차트차트차트차트차트차트차트차트자리</h>
+          <h>차트차트차트차트차트차트차트차트차트차트차트차트차트차트차트자리</h>
+          <h>차트차트차트차트차트차트차트차트차트차트차트차트차트차트차트자리</h>
+          <h>차트차트차트차트차트차트차트차트차트차트차트차트차트차트차트자리</h>
+          <h>차트차트차트차트차트차트차트차트차트차트차트차트차트차트차트자리</h>
+        </div>
         <div class="blog-card" style="position: relative; left: 100px; top: 30px;">
             <div class="meta">
               <div class="photo" style="background-image: url(https://cdn.visitkorea.or.kr/img/call?cmd=VIEW&id=806d3a5c-f4bf-4ad3-8c52-59ae5a988689)"></div>
