--- a/flask/static/infopage_css/menubar.css
+++ b/flask/static/infopage_css/menubar.css
@@ -16,9 +16,10 @@ html {height:100%;}
 
 .menubar
 {
-  position: absolute; 
-  left: 0;
+  position: absolute;
   width:1230px;
+  
+  justify-content: center;
   margin: 0;
   border:none;
   overflow: hidden;
