--- a/flask/static/infopage_css/menubar.css
+++ b/flask/static/infopage_css/menubar.css
@@ -17,9 +17,7 @@ html {height:100%;}
 .menubar
 {
   position: absolute;
-  width:1230px;
-  
-  justify-content: center;
+  width: 1140px;
   margin: 0;
   border:none;
   overflow: hidden;
@@ -40,7 +38,7 @@ html {height:100%;}
 
 .menubar ul
 {
-  background:#1D375F;
+  background:rgb(129,166,222);
   height:50px;
   list-style:none;
 }
@@ -78,9 +76,9 @@ html {height:100%;}
 
 .menubar li ul
 {
-  background: #1D375F;
+  background:rgb(129,166,222);
   display:none;
-  height:auto;
+  height:10px;
   position:absolute;
   z-index:999;
 }
@@ -88,7 +86,7 @@ html {height:100%;}
 .menubar li li a ,
 .menubar li li
 {
-  background: #1D375F;
+  background:rgb(129,166,222);
   display:block;
   float:none;
   min-width:135px;
