--- a/flask/static/infopage_css/recommend_info.css
+++ b/flask/static/infopage_css/recommend_info.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
 }
 
+.btn-toolbar button{
+  margin-left: 10px;
+}
 
 .blog-card {
   display: flex;
@@ -169,7 +172,7 @@
     position: absolute;
     left: -10px;
     top: 0;
-    bottom: 0;
+    bottom: 10;
     z-index: -1;
   }
   .blog-card.alt {
