--- a/flask/templates/infopage.html
+++ b/flask/templates/infopage.html
@@ -6,8 +6,10 @@
     <script src="{{url_for('static', filename='js/map.js')}}"></script>
     <script src="{{url_for('static', filename='js/menubar.js')}}"></script>
     <script src="{{url_for('static', filename='js/description.js')}}"></script>
+    <script src="{{url_for('static', filename='js/getUserParams.js')}}"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+ 
     <link rel="stylesheet" href="{{url_for('static', filename='infopage_css/infopage.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='infopage_css/recommend_info.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='infopage_css/menubar.css')}}">
