--- a/flask/templates/infopage.html
+++ b/flask/templates/infopage.html
@@ -10,7 +10,6 @@
     <script src="{{url_for('static', filename='js/getUserParams.js')}}"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
     <link rel="stylesheet" href="{{url_for('static', filename='infopage_css/infopage.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='infopage_css/recommend_info.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='infopage_css/menubar.css')}}">
@@ -55,7 +54,7 @@
                     <h id="hotel-info">{{results[0].info}}</h>
                   <br>
                 </p>
-                <h style=font-weight:bold><br><br>친환경적 요소</h>
+                <!-- <h style=font-weight:bold><br><br>친환경적 요소</h>
                     <br><br>
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups" >
                   <div class="btn-group mr-2" role="group" aria-label="First group" style="position:absloute; left:138px">
@@ -64,7 +63,7 @@
                     <button id="a3" type="button" style=background-color:white class="btn btn-secondary"><h style=font-size:14px;color:rgb(160,208,151)>어메니티</h></button>
                     <button id="a4" type="button" style=background-color:white class="btn btn-secondary"><h style=font-size:14px;color:rgb(160,208,151)>일회용기 미사용</h></button>
                   </div>
-                </div>
+                </div> -->
                 <br>
                 <h style=font-weight:bold>열린 관광 요소</h><br><br>
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
@@ -292,38 +291,50 @@
         </div>
         
         <div class="compare-frame" style="position:relative; margin-left:30px; top: 20px;" >
-          <canvas id="myChart" style="width: 2px; height: 1px;"></canvas>
+          <canvas id="myChart" style="width: 2px; height: 1px; position: relative; top: 20px;"></canvas>
           <script>
+              var Data = $('#my-data').data();
+              Data = Data.other.replaceAll('\'','\"')
+              Data = JSON.parse(Data)
             new Chart(document.getElementById("myChart"), {
-          type: 'radar',
-          data: {
-            labels: ["청결", "가격", "서비스", "편의", "재방문"],
-            datasets: [
-              {
-              label: "가 숙소",
-              fill: true,
-              backgroundColor: "rgba(179,181,198,0.2)",
-              borderColor: "rgba(179,181,198,1)",
-              pointBorderColor: "#fff",
-              pointBackgroundColor: "rgba(179,181,198,1)",
-              data: [2,4,9,4,10]
-            }, {
-              label: "나 숙소",
-              fill: true,
-              backgroundColor: "rgba(255,99,132,0.2)",
-              borderColor: "rgba(255,99,132,1)",
-              pointBorderColor: "#fff",
-              pointBackgroundColor: "rgba(255,99,132,1)",
-              pointBorderColor: "#fff",
-              data: [5,7,9,8,6]
-            }
+            type: 'radar',
+            data: {
+              labels: ["청결", "가격", "서비스", "편의", "재방문"],
+              datasets: [
+                {
+                label: Data.name,
+                fill: true,
+                backgroundColor: "rgba(255,99,132,0.2)",
+                borderColor: "rgba(255,99,132,1)",
+                pointBorderColor: "#fff",
+                pointBackgroundColor: "rgba(255,99,132,1)",
+                data: [5,4.5,3.5,4,5]
+            }, 
+            // {
+            //   label: "나 숙소",
+            //   fill: true,
+            //   backgroundColor: "rgba(179,181,198,0.2)",
+            //   borderColor: "rgba(179,181,198,1)",
+            //   pointBorderColor: "#fff",
+            //   pointBackgroundColor: "rgba(179,181,198,1)",
+            //   pointBorderColor: "#fff",
+            //   data: [5,7,9,8,6]
+            // }
           ]
         },
         options: {
-          title: {
-            display: true,
-            text: '가 숙소 vs 나 숙소'
+          scale: {
+              ticks: {
+                  beginAtZero: true,
+                  max: 5,
+                  min: 0,
+                  stepSize: 1
               }
+          }
+          // title: {
+          //   display: true,
+          //   text: Data.name
+          //     }
             }
         });
           </script>
