첫 결과 페이지 추천 관광지

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -130,7 +130,7 @@
         
 
         <div class="input_group">
-            <h1 class="label" style="font-size: 20px; position: relative; top: -40px;">가치 선택하기</h1>  
+            <h1 class="label" style="font-size: 20px; position: relative; top: -40px;">가치 선택</h1>  
             <form class="frame" method="get" action="form-action.html">
             <div class="left-box">
                 <label class="container"><input type="checkbox" id="value_" value="자연/경치">자연/경치<span class="checkmark"></span></label>
