--- a/flask/templates/infopage.html
+++ b/flask/templates/infopage.html
@@ -239,12 +239,12 @@
                             <p class="card-text" style="font-size: small;">좋아요~ 기대안하고 가서 그런지 아주 만족이었어요. 모텔 겸용이라 대실이 있는 것 말고는 ㅎ 깨끗하고 필요한 것들 다 있고 또 다대포 가면 이용하고 싶어요 하버뷰 이용했는데 욕조도 있고 욕조에서 티비도 보이구요. 호텔에서 잘 때 베게가 높아서 불편한 곳이 많은데 여기는 베게가 정말 폭신해서 편하게 잘 수 있었어요 다음에 가면 더 좋은 방도 이용해 보고 싶어요 추천합니다</p>
                           </div>
                     </div>
-                    <div class="card-columns" >
+                    <div class="card-columns">
                         <div class="card" style="width: 280px; margin-left: 100px;">
                           <img class="card-img-top"  src="{{ url_for('static', filename='main_img/거제_해안거님길.png')}}" alt="Card image cap">
                           <div class="card-body">
                             <h5 class="card-title">★★★★★(5)</h5>
-                            <img src="..flask/static/main_img/star.png">
+                              <img src="https://raw.githubusercontent.com/Jihun0224/KTO/master/flask/static/infopage_img/star.png" width="5px">
                             <p class="card-text" style="font-size: small;">좋아요~ 기대안하고 가서 그런지 아주 만족이었어요. 모텔 겸용이라 대실이 있는 것 말고는 ㅎ 깨끗하고 필요한 것들 다 있고 또 다대포 가면 이용하고 싶어요 하버뷰 이용했는데 욕조도 있고 욕조에서 티비도 보이구요. 호텔에서 잘 때 베게가 높아서 불편한 곳이 많은데 여기는 베게가 정말 폭신해서 편하게 잘 수 있었어요 다음에 가면 더 좋은 방도 이용해 보고 싶어요 추천합니다</p>
                           </div>
                         </div>
