--- a/flask/templates/infopage.html
+++ b/flask/templates/infopage.html
@@ -233,7 +233,7 @@
                 <div style="position: relative; top: 30px;">
                     <div class="card-columns">
                         <div class="card" style="width: 280px;">
-                          <img class="card-img-top"  src="{{ url_for('static', filename='main_img/가평_피노키오와다빈치.png')}}" alt="Card image cap">
+                          <img class="card-img-top"  src="{{ url_for('static', filename='infopage_img/1.jpg')}}"  alt="Card image cap">
                           <div class="card-body">
                             <h5 class="card-title">
                               <img src="https://raw.githubusercontent.com/Jihun0224/KTO/master/flask/static/infopage_img/star.png">
@@ -241,12 +241,12 @@
                               <img src="https://raw.githubusercontent.com/Jihun0224/KTO/master/flask/static/infopage_img/star.png">
                               <img src="https://raw.githubusercontent.com/Jihun0224/KTO/master/flask/static/infopage_img/star.png">
                               <img src="https://raw.githubusercontent.com/Jihun0224/KTO/master/flask/static/infopage_img/star.png">(5)</h5>
-                            <p class="card-text" style="font-size: small;">여자친구랑 같이 둘이서 오붓한 시간을 보내고자 풀빌라를 찾아봤고, 제일 마음에 들어서 예약하게 되었습니다. 건물도 완전 깨끗하고 깔끔하고, 조리도구도 완벽하게 준비되어있어서 더 좋았습니다. 프론트건물에 붙어 있는 방으로 예약했었는데, 다음에는 풀~빌라를 예약해서 쉬다 가고 싶습니다. 강원도라서 그런지 역시 공기가 맑고 마음이 정화가 되는 느낌이었습니다.</p>
+                            <p class="card-text" style="font-size: small;">여자친구랑 같이 둘이서 오붓한 시간을 보내고자 풀빌라를 찾아봤고, 제일 마음에 들어서 예약하게 되었습니다. 건물도 완전 깨끗하고 깔끔하고, 조리도구도 완벽하게 준비되어있어서 더 좋았습니다. 강원도라서 그런지 역시 공기가 맑고 마음이 정화가 되는 느낌이었습니다.</p>
                           </div>
                     </div>
                     <div class="card-columns">
                         <div class="card" style="width: 280px; margin-left: 100px;">
-                          <img class="card-img-top"  src="{{ url_for('static', filename='main_img/거제_해안거님길.png')}}" alt="Card image cap">
+                          <img class="card-img-top"  src="{{ url_for('static', filename='infopage_img/3.jpg')}}" alt="Card image cap">
                           <div class="card-body">
                             <h5 class="card-title">
                               <img src="https://raw.githubusercontent.com/Jihun0224/KTO/master/flask/static/infopage_img/star.png">
@@ -255,9 +255,8 @@
                               <img src="https://raw.githubusercontent.com/Jihun0224/KTO/master/flask/static/infopage_img/star.png">(4)</h5>
                             <p class="card-text" style="font-size: small;">
                               시설은 사진이랑 그대로에요! 앞에 산이 있어 운치있는 분위기네요.
-                              야외 수영장 물도 미지근해서 놀기 좋았어요.
-                              다만 입실하고 나서 방 안에 휴지쓰레기 같은게 있어서 청소가 미흡한 것 같다는 느낌이 있었고, 바닥이 타일인데 슬리퍼를 안신기에는 퍼석퍼석한 먼지 느낌이 났어요. 근데 슬리퍼도 일회용이 아니라서 너무 찝찝했어요ㅠ
-                              전기 그릴도 숯그릴 못지않게 잘돼서 너무 좋았어요.</p>
+                              다만 입실하고 나서 방 안에 쓰레기 같은게 있어서 청소가 미흡한 것 같다는 느낌이 있었고, 바닥이 타일인데 슬리퍼를 안신기에는 퍼석퍼석한 먼지 느낌이 났어요.
+                              전기 그릴도 숯그릴 못지않게 잘돼서 좋았어요.</p>
                           </div>
                         </div>
                 </div>           
