워드 클라우스 추가

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -130,22 +130,18 @@
         
 
         <div class="input_group">
-            <h1 class="label" style="font-size: 20px; position: relative; top: -40px;">가치 선택</h1>  
+            <h2 class="label" style="font-size: 20px; position: relative; top: -40px;">가치 선택</h2>  
             <form class="frame" method="get" action="form-action.html">
             <div class="left-box">
-                <label class="container"><input type="checkbox" id="value_" value="자연/경치">자연/경치<span class="checkmark"></span></label>
-                <label class="container"><input type="checkbox" id="value_" value="체험/학습">체험/학습<span class="checkmark"></span></label>
-                <label class="container"><input type="checkbox" id="value_" value="낭만적인">낭만적인<span class="checkmark"></span></label>
-                <label class="container"><input type="checkbox" id="value_" value="여유로운">여유로운<span class="checkmark"></span></label>
-                <label class="container"><input type="checkbox" id="value_" value="미식">미식<span class="checkmark"></span></label>
-                <label class="container"><input type="checkbox" id="value_" value="레저">레저<span class="checkmark"></span></label>
+                <label class="container"><input type="checkbox" id="value_" value="체험/놀이">체험/놀이<span class="checkmark"></span></label>
+                <label class="container"><input type="checkbox" id="value_" value="자연/풍경">자연/풍경<span class="checkmark"></span></label>
+                <label class="container"><input type="checkbox" id="value_" value="관광지">관광지<span class="checkmark"></span></label>
+                
             </div>
             <div class="right-box">
                 <label class="container"><input type="checkbox" id="value_" value="휴식/힐링">휴식/힐링<span class="checkmark"></span></label>
-                <label class="container"><input type="checkbox" id="value_" value="사진/영상">사진/영상<span class="checkmark"></span></label>
-                <label class="container"><input type="checkbox" id="value_" value="드라이브">드라이브<span class="checkmark"></span></label>
-                <label class="container"><input type="checkbox" id="value_" value="활기찬">활기찬<span class="checkmark"></span></label>
-                <label class="container"><input type="checkbox" id="value_" value="힐링">힐링<span class="checkmark"></span></label>
+                <label class="container"><input type="checkbox" id="value_" value="비즈니스">비즈니스<span class="checkmark"></span></label>
+                <label class="container"><input type="checkbox" id="value_" value="미식/식도락">미식/식도락<span class="checkmark"></span></label>
             </div>
         </div>
         <br>
